[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/objects/AbstractObject.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[node name="Object" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ObjectCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TraitsList" type="ItemList" parent="."]
visible = false
margin_left = 0.263519
margin_right = 75.2635
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TraitUiOpener" type="Area2D" parent="."]
modulate = Color( 0.898039, 0, 1, 1 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TraitUiOpener"]
position = Vector2( 0.513336, -0.513351 )
shape = SubResource( 2 )
[connection signal="item_activated" from="TraitsList" to="." method="_on_TraitsList_item_activated"]
[connection signal="body_entered" from="TraitUiOpener" to="." method="_on_TraitUiOpener_body_entered"]
[connection signal="body_exited" from="TraitUiOpener" to="." method="_on_TraitUiOpener_body_exited"]
